recursion.lessons.recursion.koch.Koch.scala.error
Koch:25: error: expected start of definition
	override def run() {
                 ^Koch:28: error: Unmatched closing brace '}' ignored here
}
^